--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,16 @@
       if (parseGeoraster) {
         document.body.innerHTML = "We have loaded the parseGeoraster function";
       }
+
+      const url = "../data/GeogToWGS84GeoKey5.tif"
+      fetch(url)
+        .then(response => response.arrayBuffer() )
+        .then(parseGeoraster)
+        .then(georaster => {
+            var message = "<br/> georaster is <br/>";
+            message += JSON.stringify(georaster, null, '\t').replace(/\n/g,'<br/>').replace(/\t/g,'&nbsp;&nbsp;&nbsp;');
+            document.body.innerHTML += message;
+        });
     </script>
   </body>
 </html>
