updated example again

--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <div id="container"></div>
     <script>
       if (parseGeoraster) {
-        document.body.innerHTML = "We have loaded the parseGeoraster function";
+        document.getElementById("container").textContent = "We have loaded the parseGeoraster function";
       }
 
       const url = "https://geotiff.github.io/georaster/data/GeogToWGS84GeoKey5.tif";
@@ -17,7 +17,7 @@
         .then(georaster => {
             var message = "<br/> georaster is <br/>";
             message += JSON.stringify(georaster, null, '\t').replace(/\n/g,'<br/>').replace(/\t/g,'&nbsp;&nbsp;&nbsp;');
-            document.getElementById("container").innerHTML = message;
+            document.getElementById("container").textContent += message;
         });
     </script>
   </body>
