--- a/test/toCanvas.html
+++ b/test/toCanvas.html
@@ -6,9 +6,18 @@
   <body>
     <div id="container"></div>
     <script>
-        const url = "https://s3.amazonaws.com/geoblaze/wildfires.tiff";
-        fetch(url)
-        .then(response => response.arrayBuffer() )
+        fetch("https://s3.amazonaws.com/geoblaze/wildfires.tiff")
+        .then(response => response.arrayBuffer())
+        .then(parseGeoraster)
+        .then(georaster => {
+            console.log("georaster", georaster);
+            const canvas = georaster.toCanvas({ height: 500, width: 500 });
+            console.log("canvas:", canvas);
+            document.getElementById("container").appendChild(canvas);
+        });
+
+        fetch("https://s3.amazonaws.com/geoblaze/LC08_L1TP_045032_20180811_20180815_01_T1_B7_100x100.TIF")
+        .then(response => response.arrayBuffer())
         .then(parseGeoraster)
         .then(georaster => {
             console.log("georaster", georaster);
