--- a/test/toCanvas.html
+++ b/test/toCanvas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../dist/georaster.bundle.min.js"></script>
+    <script src="../dist/georaster.browser.bundle.min.js"></script>
   </head>
   <body>
     <div id="container"></div>
