replaced 3 xml packages with xml-utils

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://unpkg.com/georaster"></script>
+    <script src="../dist/georaster.browser.bundle.js"></script>
   </head>
   <body>
     <div id="container"></div>
